Fixed background image so it would not stretch when scrolling down

--- a/personal_website/src/App.css
+++ b/personal_website/src/App.css
@@ -1,6 +1,7 @@
 body{
   background: url("./background-image2.jpg");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .App {
